ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enterprise-app
  namespace: enterprise-mig
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: enterprise.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: enterprise-app
                port:
                  number: 80
